Modified for ros2

--- a/ur_msgs/CMakeLists.txt
+++ b/ur_msgs/CMakeLists.txt
@@ -1,55 +1,30 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.5)
 project(ur_msgs)
 
-## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS message_generation std_msgs)
+# Default to C++14
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
+endif()
 
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
+
+find_package(ament_cmake REQUIRED)
+find_package(builtin_interfaces REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
 
 ## Generate messages in the 'msg' folder
-add_message_files(
-   FILES
-   Analog.msg
-   Digital.msg
-   IOStates.msg
-   RobotStateRTMsg.msg
-   MasterboardDataMsg.msg
-   ToolDataMsg.msg
+rosidl_generate_interfaces(ur_msgs
+   "msg/Analog.msg"
+   "msg/Digital.msg"
+   "msg/IOStates.msg"
+   "msg/RobotStateRTMsg.msg"
+   "msg/MasterboardDataMsg.msg"
+   "msg/ToolDataMsg.msg"
+   "srv/SetPayload.srv"
+   "srv/SetIO.srv"
+   DEPENDENCIES builtin_interfaces
 )
 
-## Generate services in the 'srv' folder
-add_service_files(
-   FILES
-   SetPayload.srv
-   SetIO.srv
-)
-
-
-## Generate added messages and services with any dependencies listed here
-generate_messages(
-   DEPENDENCIES
-   std_msgs
-)
-
-###################################
-## catkin specific configuration ##
-###################################
-catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES ur_msgs
-   CATKIN_DEPENDS message_runtime std_msgs
-#  DEPENDS system_lib
-)
-
-###########
-## Build ##
-###########
-
-#############
-## Install ##
-#############
-
-#############
-## Testing ##
-#############
+ament_package()
